# shadow-forge

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  tsconfig.base.json
services/agentd-py/: README.md  pyproject.toml
services/agentd-py/agentd/: __init__.py  main.py
services/agentd-py/agentd/api/: routes.py
services/agentd-py/agentd/chat/: agent.py  app_factory.py  classifier.py  controller.py  controller_factory.py  controller_loop.py  controller_prompts.py  edit_session.py  live_state.py  models.py  storage.py  todo_ledger.py
services/agentd-py/agentd/domain/: models.py  state_machine.py
services/agentd-py/agentd/env/: ensure.py  probe.py  profile_builder.py
services/agentd-py/agentd/mcp/: client.py  rules.py  tool_source.py
services/agentd-py/agentd/memory/: compactor.py  consolidator.py  harness.py  recall.py  store.py
services/agentd-py/agentd/orchestrator/: broadcaster.py  engine.py  scripted_engine.py
services/agentd-py/agentd/patch/: __init__.py  engine.py  policy.py
services/agentd-py/agentd/planning/: __init__.py  agent.py  loop.py  plan_patch.py  prompts.py  registry.py
services/agentd-py/agentd/providers/: __init__.py  anthropic_transport.py  contracts.py  gemini_transport.py  openai_reasoner.py  openai_transport.py  turboquant_transport.py
services/agentd-py/agentd/reasoning/: __init__.py  contracts.py  engine.py  env_prompts.py  narrative_prompts.py  prompt_builder.py  tool_prompts.py
services/agentd-py/agentd/retrieval/: __init__.py  artifact_client.py  graph_walker.py
services/agentd-py/agentd/skills/: catalog.py  loader.py  models.py
services/agentd-py/agentd/storage/: base.py  in_memory.py  sqlite_store.py
services/agentd-py/agentd/tools/: env.py  files.py  loop.py  registry.py  search.py  shell.py  verify_phase_sm.py
services/agentd-py/agentd/tools/post_patch/: __init__.py  (+4 more)
services/agentd-py/agentd/validation/: command_validator.py
services/agentd-py/agentd/workspace/: shadow.py
services/agentd-py/ai_editor_agentd.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/agentd-py/tests/: test_anthropic_transport.py  test_chat_controller_qa.py  test_chat_live_route.py  test_chat_storage.py  test_command_validator.py  test_consolidator_distill.py  test_controller_durable_edit.py  test_controller_durable_history.py  test_controller_durable_turn.py  test_controller_edit_clarify.py  test_controller_loop_clarify_propose.py  test_controller_loop_edit.py  test_controller_payload.py  test_controller_phase.py  test_controller_prompt_flag.py  test_controller_prompt_instructions.py  test_controller_route_detach.py  test_controller_stop_partial_history.py  test_delta_replan.py  test_draft_conventions_contract.py  test_edit_decision.py  test_env_probe.py  test_env_profile_builder.py  test_env_profile_ensure.py  test_env_profile_routes.py  test_event_broadcaster.py  test_gate_breadcrumbs.py  test_gemini_transport.py  test_graph_walker.py  test_graph_walker_reachability.py  test_mcp_client.py  test_memory_integration_compaction.py  test_memory_recall_wiring.py  test_memory_store_phase2.py  test_memory_terminal_trigger.py  test_memory_tool_loop_wiring.py  test_memory_write_integration.py  test_mode_decision.py  test_narrative_exposed.py  test_openai_reasoner.py  (+41 more)
services/agentd-py/tests/fixtures/: mcp_echo_server.py
services/indexer-rs/: Cargo.toml  README.md
services/indexer-rs/src/: config.rs  graph.rs  lib.rs  lsp.rs  main.rs  parser.rs  resolver.rs  service.rs
services/indexer-rs/tests/: cli_tests.rs  graph_tests.rs  parser_tests.rs  resolver_tests.rs  snapshot_tests.rs
(+99 files in other folders)
