[project]
name = "ai-editor-agentd"
version = "0.1.0"
description = "Python orchestration backend for AI Editor"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "pydantic>=2.11.0",
  "structlog>=24.4.0",
  "httpx>=0.28.0",
  "openai>=1.68.0",
  "anthropic>=0.45.0",
  "google-genai>=1.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.25.0",
  "ruff>=0.9.0",
  "mypy>=1.15.0"
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"
