[project]
name = "ai-editor-agentd"
version = "0.1.0"
description = "Python orchestration backend for AI Editor"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "pydantic>=2.11.0",
  "structlog>=24.4.0",
  "httpx>=0.28.0",
  "openai>=1.68.0",
  "anthropic>=0.45.0",
  "google-genai>=1.0.0",
  "huggingface_hub>=0.33.0",
  "groq>=0.11.0",
  "ibm-watsonx-ai>=1.3.0",
  "libcst>=1.5.0",
  "tree-sitter-languages>=1.10.2",
  "unidiff>=0.7.5",
  "pyyaml>=6.0"
]

[project.scripts]
ai-editor-eval = "agentd.eval.cli:main"

[project.optional-dependencies]
semantic = [
  "lancedb>=0.20",
  "sentence-transformers>=3.0",
]
memory = [
  "sqlite-vec>=0.1.6",
  "sentence-transformers>=3.0",
  "numpy>=1.24",
]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.25.0",
  "pytest-timeout>=2.0.0",
  "ruff>=0.9.0",
  "mypy>=1.15.0"
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
# The project root must be importable so test helpers shared via `from tests.X
# import ...` resolve; the strict-editable install adds a finder, not the root.
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
# Prompt templates and JSON schema dicts contain long description strings by necessity
"agentd/reasoning/tool_prompts.py" = ["E501"]
"agentd/reasoning/prompt_builder.py" = ["E501"]
"agentd/tools/registry.py" = ["E501"]
"agentd/planning/prompts.py" = ["E501"]
"agentd/chat/controller_prompts.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# Pin discovery to the import package; a stray `workspaces/` test dir at the
# project root otherwise trips setuptools flat-layout multi-package detection.
include = ["agentd*"]
